2011-10-17 Jiri Sadek, Tomas Divis, Juraj Vicenik, Vit Vomacko (3.7.0)

    * Registrar unblocking functionality impl.
    * Fixed wrong result code for successfull operation in BankPaymentDetail
    * Removed BankPayment InvoiceId filter
    * Local distfred removed
    * Simple filter tests
    * Removed unused code
    * Unused nicauth support temporarily disabled

2011-01-24 (3.6.0)
    
    * Added timeout functionality in filters, the timeout is configurable
    * Added filter for Destination Account, AccountMemo and CRTime in BankStatementFilter
    * Added object references and result to LogRequest detail   

2010-10-24 Tomas Divis (3.5.4)

    * Fixing unicode

2010-10-23 Jaromir Talir (3.5.2)
    
    * Showing messages again

2010-10-18 Tomas Divis (3.5.1)
    * Temporary disabling message display

2010-10-18 Tomas Divis (3.5.0)
    * Support for listing messages 
    * Implemented refactored logging interface 

2010-08-11 Jan Zima (3.4.5)

    * Change of registrar country attribute fixed
    * Username attribute added to Logger request deatil

2010-08-06 Jiri Sadek (3.4.4)
    * Logger filters for object's handle fixed (property name)

2010-07-22 Tomas Brambora, Jiri Sadek (3.4.3)
    * Keyset detail display fix
	* Enhance permissions granularity (initial version)
	* Typo fixes

2010-07-02 Jiri Sadek (3.4.2)
    * Registrar edit form fix (system registrar bug)

2010-07-02 Jiri Sadek (3.4.1)
    * publish flag in domain detail

2010-06-28 Tomas Brambora (3.4.0)
    * NSSet detail - report level field added
    * Registrar edit form facelift (hideable sections).
    * Added support for registrar certifications.
    * Registrars can now be assigned to groups.
    * Added registrar groups editor (creating/deleting/renaming groups).
    * Logging only changes in registrar editation.
    * Added group filter to registrar filter form.
    * Added "next/prev." links to filter form page (briefly - if there is a 